popup visibility fixed

--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ body {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
+  overflow: hidden;
 }
 
 .popup-active {
